# AirportVideoSystem

./: .gitignore  README.dataset.txt  README.md  README.roboflow.txt  app (4).py  app.py  app_fix.py  augmentation.py  auto_label (2).py  benchmark_formats.ipynb  data.yaml  hard_negatives.py  hy_world_airport.ipynb  info_data.md  main.py  pyproject.toml  requirements (2).txt  scrape_images.py  split_dataset.py  train_finetune.py
AirportVideoSystem/: requirements.txt
AirportVideoSystem/modules/: detection.py  events.py  utils.py  visualization.py
AirportVideoSystem/sources/: __init__.py  render.py
AirportVideoSystem_final/project/: app_streamlit.py  benchmark_onnx.py  convert_onnx.py  diagnose_detection.py  optimize_cpu.py  process_video.py  slam_only.py  web_app.py
augm_split/: data.yaml
augm_split/augmented/: data.yaml
augm_split/train/: labels.cache
augm_split/val/: labels.cache
boots_dataset/: README.dataset.txt  README.roboflow.txt  data.yaml
far_view_dataset/: data.yaml
far_view_dataset/train/: labels.cache
far_view_dataset/val/: labels.cache
models/BestBoots_v2_openvino_model/: BestBoots_v2.xml  metadata.yaml
models/BestPose_openvino_model/: BestPose.xml  metadata.yaml
models/person_openvino_model/: metadata.yaml  person.xml
modules/: __init__.py  detection.py  slam.py  tracker.py  utils.py
train/labels/: chock_0477dafd0ca2_jpg.rf.67d7c8712bc3e1cbbd42509b38b15a2f.txt  chock_067d77e1d466_jpg.rf.25145869dd7350ef1554733eb0982fb8.txt  chock_0d8cb5cf1019_jpg.rf.e098496db10da48d4fbbc0bcc82471ae.txt  (+25 more)
(+1753 files in other folders)
