[project]
name = "application-for-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.0",
    "torchaudio>=2.5.1",
    "albumentations>=1.3.0",
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "flask>=3.1.3",
    "ipykernel>=7.2.0",
    "numpy>=1.24.0",
    "onnxruntime>=1.24.4",
    "onnxruntime-openvino>=1.24.1",
    "opencv-python-headless>=4.8.0",
    "openvino>=2024.6.0",
    "openvino-dev>=2024.6.0",
    "pillow>=10.0.0",
    "plotly>=6.6.0",
    "requests>=2.32.5",
    "streamlit>=1.28.0",
    "ultralytics>=8.0.0",
]

# ── PyTorch CUDA 12.4 index ───────────────────────────────────────────────────
[tool.uv.sources]
torch      = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio  = { index = "pytorch-cu124" }

[[tool.uv.index]]
name     = "pytorch-cu124"
url      = "https://download.pytorch.org/whl/cu124"
explicit = true
